<resources>
    <string name="app_name">FinalProject</string>
    <string name="movie_placeholder">Lorem Ipsum the Movie</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular</string>
    <string name="favourites">Favourites</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium sapien sed rhoncus porta. Nunc varius ac nisl in venenatis.</string>
    <string name="time_placeholder">1 hour 12 minutes</string>
    <string name="retrieval_error">Couldn\'t retrieve data.\nPlease check your internet connection.</string>
    <string name="trailer_button">trailer button</string>
    <string name="credits_title">Cast</string>
    <string name="loading">Loading…</string>
    <string name="placeholder_date">(2021)</string>
    <string name="empty_favourites">You currently have no favourites.\nTo add a movie, click on the heart icon after choosing a movie.</string>
    <string name="movie_backdrop">Movie backdrop</string>
    <string name="backdrop_gradient">Backdrop gradient</string>
    <string name="cast_profile_picture">Cast profile picture</string>
    <string name="movie_poster">Movie poster</string>
    <string name="genre_placeholder">Fantasy, Action</string>
    <string name="rating_placeholder">4.9</string>
    <string name="overview_label">Overview</string>
</resources>