<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".frontend.activities.MovieDetailsActivity">
            <ImageView
                android:id="@+id/iv_backdrop"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/movie_backdrop"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:scaleType="fitXY"
                android:src="@drawable/fg_backdrop_gradient"
                android:contentDescription="@string/backdrop_gradient"/>
            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:layout_marginTop="70dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:src="@color/black"
                android:contentDescription="@string/movie_poster"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_trailer"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignEnd="@id/iv_poster"
                android:layout_alignBottom="@id/iv_poster"
                android:layout_marginEnd="-25dp"
                android:layout_marginBottom="-25dp"
                android:contentDescription="@string/trailer_button"
                android:foregroundTint="@color/white"
                android:src="@drawable/ic_baseline_play_arrow_24"
                android:visibility="visible"
                app:fabCustomSize="50dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iv_poster"
                android:layout_alignTop="@id/iv_poster"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/movie_placeholder"
                    android:ellipsize="end"
                    android:maxLines="2" />
                <TextView
                    android:id="@+id/tv_release_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_date"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/tv_genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre_placeholder"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/tv_runtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_placeholder"
                    android:textColor="@color/white"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_rating_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating_placeholder"
                        android:textColor="@color/white"
                        android:layout_marginEnd="10dp" />
                    <RatingBar
                        android:id="@+id/rb_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:theme="@style/RatingBar"
                        android:numStars="5"
                        android:stepSize="0.1" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_poster"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/overview_label"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tv_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_ipsum" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_credits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_overview"
                android:orientation="vertical">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="?android:attr/listDivider"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="24sp"
                    android:text="@string/credits_title"
                    android:textStyle="bold" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_credits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"
                    tools:listitem="@layout/credit_item"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
            </LinearLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
    <RelativeLayout
        android:id="@+id/rl_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">
        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</RelativeLayout>
